# VibeShell

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yml
docs/architecture/: module-map.md  roadmap.md  v2-overview.md
scripts/: generate_app_icon.py  protocol-smoke.mjs
src/: App.tsx  i18n.ts  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/agent/: mod.rs
src-tauri/src/ai/: mod.rs
src-tauri/src/app/: mod.rs
src-tauri/src/encryption/: mod.rs
src-tauri/src/ftp/: mod.rs
src-tauri/src/groups/: mod.rs
src-tauri/src/history/: mod.rs
src-tauri/src/plugins/: mod.rs
src-tauri/src/session/: mod.rs
src-tauri/src/sftp/: mod.rs
src-tauri/src/ssh/: client.rs  config.rs  mod.rs  session.rs  session_test.rs
src-tauri/src/storage/: mod.rs
src-tauri/src/workspace/: mod.rs
src/components/: AgentPanel.tsx  AiDrawer.tsx  AiProviderSettings.tsx  AppModals.tsx  BrandMark.tsx  ConnectionForm.tsx  ConnectionList.tsx  DialogModals.tsx  FileBrowserPanel.tsx  GroupManagementModal.tsx  ServerContextMenu.tsx  SettingsPanel.tsx  TerminalGrid.tsx  ToastContainer.tsx  WorkspaceEmptyState.tsx  WorkspaceHeader.tsx  WorkspaceSidebar.tsx  WorkspaceSidebarV2.tsx  WorkspaceTabs.tsx
src/hooks/: useCommandHistory.ts  useConnectionManager.ts  useServerGroups.ts  useSftpDragDrop.ts  useToast.ts  useWorkspacePersistence.ts
src/lib/: domain.ts  tauri.ts
src/state/: ai-actions.ts  ai.ts  bootstrap.ts  (+14 more)
(+13 files in other folders)
