[package]
name = "vibeshell"
version = "0.1.0"
description = "A modern, AI-first SSH/SFTP terminal"
authors = ["VibeShell Team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = [] }
tauri-plugin-shell = "2.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.37.0", features = ["full"] }
russh = "0.42.0"
russh-keys = "0.42.0"
russh-sftp = "2.1.1"
suppaftp = { version = "5.3.0", features = ["async"] }
# lancedb = "0.9.0"  # 等待上游修复 arrow-arith/chrono quarter() 冲突后恢复
rusqlite = { version = "0.32.0", features = ["bundled"] }  # RAG 持久化临时方案
keyring = "2.3.0"
dirs = "6.0.0"
reqwest = { version = "0.13.2", features = ["json"] }
async-trait = "0.1.89"
async-std = "1.13.2"
uuid = { version = "1.10.0", features = ["v4", "serde"] }
chrono = "0.4"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"

[features]
default = []
custom-protocol = ["tauri/custom-protocol"]
